--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     </p>
     <div class="flex flex-row items-center gap-12 mx-auto mt-10" id="pics">
         <!-- class="order-last" -->
-        <a onclick="window.location.href = 'correct.html'" id="correct" class="overflow-hidden w-[35vw]">
+        <a onclick="window.location.href = 'correct.html'" id="correct" class="overflow-hidden w-[35vw] h-[320px]">
             <img
-                id="correct_img" class="object-cover w-full hover:brightness-75 h-72" src="" loading="eager">
+                id="correct_img" class="object-cover w-full hover:brightness-75 h-full" src="" loading="eager">
             </a>
-        <a onclick="window.location.href = 'wrong.html'" id="wrong" class="overflow-hidden w-[35vw] max-h-72">
+        <a onclick="window.location.href = 'wrong.html'" id="wrong" class="overflow-hidden w-[35vw] h-[320px]">
             <img
-                id="wrong_img" class="object-cover w-full hover:brightness-75 h-72" src="" loading="eager">
+                id="wrong_img" class="object-cover w-full hover:brightness-75 h-full" src="" loading="eager">
             </a>
     </div>
     <p class="w-3/4 pb-5 mx-auto mt-auto text-sm text-center">Made by Arjun Sharma based on code originally written by
